[package]
name = "lol-stat-grabber"
version = "0.1.0"
edition = "2024"

[dependencies]
riven = "2.74.0"
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"] }
sled = "0.34.7"
serde = { version = "1.0.228", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
serde_json = "1.0.145"
